# bevy-rrise

./: .gitignore  Cargo.toml  README.md  gen_doc.bat  gen_doc.sh
.cargo/: config.toml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/bevy_rrise/: all.html  index.html  macro.rrise_setting!.html  macro.rrise_setting.html  sidebar-items.js  struct.AkCallbackEvent.html  trait.ToAkTransform.html
docs/bevy_rrise/emitter_listener/: index.html  sidebar-items.js  struct.RrDynamicEmitterBundle.html  struct.RrEmitter.html  struct.RrEmitterBundle.html  struct.RrListener.html  struct.RrListenerBundle.html  struct.RrRegistered.html
docs/bevy_rrise/plugin/: enum.RriseLabel.html  index.html  sidebar-items.js  struct.CallbackChannel.html  struct.RriseBasicSettings.html  struct.RrisePlugin.html  struct.RrisePluginSettings.html  type.RriseCommSettings.html  type.RriseDeviceSettings.html  type.RriseMemSettings.html  type.RriseMusicSettings.html  type.RriseSoundEnginePlatformSettings.html  type.RriseSoundEngineSettings.html  type.RriseStreamMgrSettings.html
docs/bevy_rrise/sound_engine/: enum.AkCallbackInfo.html  enum.AkID.html  enum.AkResult.html  index.html  sidebar-items.js  struct.AkCallbackType.html  struct.PostEventAtLocation.html  struct.SoundEngine.html  type.AkGameObjectID.html  type.AkPlayingID.html
docs/implementors/bevy_rrise/: trait.ToAkTransform.js
examples/: doppler_drone.rs  music_visualizer.rs
examples/WwiseProject/: WwiseTest_WwiseProject.wproj
src/: emitter_listener.rs  lib.rs  plugin.rs  sound_engine.rs
(+28 files in other folders)
