[package]
name = "bevy-rrise"
version = "0.2.0"
edition = "2021"
authors = ["David Taralla <davidtaralla@gmail.com> & Contributors to the Rrise project"]
description = "A Wwise Bevy integration"
repository = "https://github.com/dtaralla/bevy-rrise"
documentation = "https://dtaralla.github.io/bevy-rrise/"
readme = "README.md"
keywords = ["library", "sound", "3D", "wwise"]
categories = ["multimedia", "game-development"]
license-file = "LICENSE"
exclude = [
    "/examples/WwiseProject/Originals",
]

[dependencies]
crossbeam-channel = "0.5"

[dependencies.rrise]
version = "0.2"

[dependencies.tracing]
version = "0.1"
features = ["attributes"]

[dependencies.bevy_easings]
version = "0.8"
optional = true

[dependencies.rrise-headers]
version = "0.2"
optional = true

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["bevy_asset"]

[target.'cfg(windows)'.dev-dependencies.bevy]
version = "0.8"
default-features = false
features = ["bevy_winit", "bevy_gltf"]

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.8"
default-features = false
features = ["x11"]

[[example]]
name = "music_visualizer"
required-features = ["bevy/render", "rrise-headers", "rrise/AkParametricEQFX"]

[[example]]
name = "doppler_drone"
required-features = ["bevy/render", "bevy_easings", "rrise/AkParametricEQFX"]